[gd_scene load_steps=6 format=3 uid="uid://ctix7ht7j4wfy"]

[ext_resource type="Script" uid="uid://cto6yet2gorpv" path="res://Menu/Menu.gd" id="2"]
[ext_resource type="Theme" uid="uid://cwvl2mwyoxrrk" path="res://Menu/MenuTheme.tres" id="2_3hib7"]
[ext_resource type="Theme" uid="uid://dac2l6uvyv1my" path="res://Menu/SubMenuTheme.tres" id="3_20qwh"]
[ext_resource type="PackedScene" uid="uid://b7c5vpfo7my25" path="res://Menu/BusSlider.tscn" id="4"]

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_vuj66"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
texture = SubResource("PlaceholderTexture2D_vuj66")

[node name="MainMenu" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20
alignment = 1

[node name="TextureRect" type="Label" parent="MainMenu"]
layout_mode = 2
theme = ExtResource("2_3hib7")
text = "TITLE"
horizontal_alignment = 1

[node name="Separator" type="Control" parent="MainMenu"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2

[node name="PlayButton" type="Button" parent="MainMenu"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("2_3hib7")
text = "Play"

[node name="SettingsButton" type="Button" parent="MainMenu"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("2_3hib7")
text = "Settings"

[node name="QuitButton" type="Button" parent="MainMenu"]
visible = false
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("2_3hib7")
text = "Quit"

[node name="MainMenuMask" type="ColorRect" parent="."]
visible = false
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.211765, 0.211765, 0.211765, 0)

[node name="SubMenu" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(600, 0)
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -600.0
offset_right = 0.000488281
grow_horizontal = 0
grow_vertical = 2
alignment = 1

[node name="Title" type="Label" parent="SubMenu" groups=["Settings"]]
layout_mode = 2
theme = ExtResource("3_20qwh")
theme_override_font_sizes/font_size = 128
text = "Settings"
horizontal_alignment = 1

[node name="Separator" type="Control" parent="SubMenu"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2

[node name="Main" parent="SubMenu" groups=["Settings"] instance=ExtResource("4")]
layout_mode = 2
label_text = "Main Volume"
bus_name = "Master"
highlight_color = Color(0.68, 0.498667, 0, 1)

[node name="Music" parent="SubMenu" groups=["Settings"] instance=ExtResource("4")]
layout_mode = 2
label_text = "Music"
bus_name = "Music"
highlight_color = Color(0.68, 0.498667, 0, 1)

[node name="Effects" parent="SubMenu" groups=["Settings"] instance=ExtResource("4")]
layout_mode = 2
label_text = "Sound Effects"
bus_name = "SFX"
highlight_color = Color(0.68, 0.498667, 0, 1)

[node name="Separator2" type="Control" parent="SubMenu"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2

[node name="BackButton" type="Button" parent="SubMenu" groups=["Settings"]]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
size_flags_horizontal = 8
theme = ExtResource("3_20qwh")
text = "Back"

[connection signal="pressed" from="MainMenu/PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="MainMenu/SettingsButton" to="." method="_on_submenu_button_pressed" binds= ["Settings"]]
[connection signal="pressed" from="MainMenu/QuitButton" to="." method="_on_QuitButton_pressed"]
[connection signal="pressed" from="SubMenu/BackButton" to="." method="close_submenu"]
